# Dj-Elastic

./: pyproject.toml  requirements.txt
books/: admin.py  models.py
books/migrations/: 0001_initial.py  0002_alter_author_avatar.py  0003_alter_author_avatar.py
core/: config.py  settings.py  urls.py
core/settings/: base.py  dev.py  prod.py
search_indexes/documents/: book.py
